# llm-zoomcamp-2026

./: .env.tpl  .envrc  .gitignore  README.md  pyproject.toml  utils.py
hw1-agentic-rag/: solution.ipynb
hw2-vector-search/: answers.md  solution.ipynb
hw3-orchestration/: answers.md
hw3-orchestration/scripts/: start-kestra.sh
hw4-evaluation/: answers.md  solution.ipynb
hw5-monitoring/: answers.md  solution.ipynb
workshop-dlt/: answers.md  dlt_pipeline.py  solution.ipynb
