[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gitsource>=0.0.5",
    "ipykernel>=7.3.0",
    "minsearch>=0.1.1",
    "onnxruntime>=1.27.0",
    "openai>=2.43.0",
    "tokenizers>=0.23.1",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
]
