[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb]>=1.6.1",
    "embedder>=0.0.7",
    "gitsource>=0.0.5",
    "ipykernel>=7.3.0",
    "logfire>=3.16.0",
    "minsearch>=0.1.1",
    "onnxruntime>=1.27.0",
    "openai>=2.43.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-ai>=0.0.49",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "tokenizers>=0.23.1",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "nbconvert>=7.17.1",
]

[[tool.uv.dependency-metadata]]
name = "embedder"
version = "0.0.7"
requires-dist = [
    "base-processor",
    "feather-format",
    "numpy",
    "pandas",
    "scikit-learn",
    "spacy",
]
